@@ -1,3 +1,6 @@
+AD-2004-01-15-2: Bugfix:    Did fix build on glinux
+                 Changed:   qmaster, lck
+
 AD-2004-01-15-1: Bugfix:    - Did apply patch from John Marshall for SUPER-UX
                  Changed:   utilbin
 
